--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -37,11 +38,8 @@
 	    	</ul>
 	    </div>
 	    <form id="add-book">
+            <input type="checkbox" id="hide"/>
+            <label for="hide">Hide all books</label>
 	    	<input type="text" placeholder="Add a book..." />
 	    	<button>Add</button>
 	    </form>
-
-    </div>
-    <script src="app.js"></script>
-  </body>
-</html> 
